examples/test/testpolicy4498.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4498
  namespace: namespace463
spec:
  podSelector:
    matchLabels:
      key14: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value36
          key17: value46
          key1: value35
      podSelector:
        matchLabels:
          key6: value13
          key7: value2
          key10: value28
